--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dicoding.mygithubuserapp">
     <permission
-        android:name="com.dicoding.githublistapplication.WRITE_DATABASE"
+        android:name="com.dicoding.mygithubuserapp.WRITE_DATABASE"
         android:protectionLevel="normal" />
     <permission
-        android:name="com.dicoding.githublistapplication.READ_DATABASE"
+        android:name="com.dicoding.mygithubuserapp.READ_DATABASE"
         android:protectionLevel="normal" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -27,11 +27,11 @@
 
         <provider
             android:name=".provider.FavoriteProvider"
-            android:authorities="com.dicoding.githublistapplication"
+            android:authorities="com.dicoding.mygithubuserapp"
             android:enabled="true"
             android:exported="true"
-            android:readPermission="com.dicoding.githublistapplication.READ_DATABASE"
-            android:writePermission="com.dicoding.githublistapplication.WRITE_DATABASE" />
+            android:readPermission="com.dicoding.mygithubuserapp.READ_DATABASE"
+            android:writePermission="com.dicoding.mygithubuserapp.WRITE_DATABASE" />
 
         <activity android:name=".FavoriteActivity" />
         <activity
