--- a/consumerapp/src/main/AndroidManifest.xml
+++ b/consumerapp/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dicoding.consumerapp">
-    <uses-permission android:name="com.dicoding.githublistapplication.READ_DATABASE" />
-    <uses-permission android:name="com.dicoding.githublistapplication.WRITE_DATABASE" />
+    <uses-permission android:name="com.dicoding.mygithubuserapp.READ_DATABASE" />
+    <uses-permission android:name="com.dicoding.mygithubuserapp.WRITE_DATABASE" />
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
@@ -29,5 +29,7 @@
             </intent-filter>
         </activity>
     </application>
-
+    <queries>
+        <package android:name="com.dicoding.mygithubuserapp" />
+    </queries>
 </manifest>
